[package]
name = "surreal-to-wasm-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
surrealdb = { version = "1.3.1", features = ["kv-mem"] }
tokio = { version = "1.37.0", features = ["rt", "macros"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = ['console'] }

[lib]
crate-type = ["cdylib", "rlib"]



